@@ -16,16 +16,13 @@
 # Free Software Foundation, Inc.,
 # 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
-INCLUDES = -I$(top_srcdir) \
-           -I$(top_srcdir)/src/libinternal \
-           -I$(top_builddir)/src
+INCLUDES = -I$(top_srcdir)/src/libinternal
 
-noinst_HEADERS = dummy.c \
-                 map.h \
+noinst_HEADERS = map.h \
                  node.h \
-                 single.c \
                  vconfig.h
 
 noinst_LIBRARIES = libvconfig.a
 
-libvconfig_a_SOURCES = main.c
+libvconfig_a_SOURCES = main.c \
+                       single.c
